See #33699 added timeout diagnostic shutdown server

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -325,6 +325,7 @@ preferences.ConnectAtStartup=Connect at startup
 preferences.ConnectOnDouble-click=Connect on double-click
 preferences.Connection=Connection
 preferences.Connections=Connections
+preferences.Connection.shutdown.timeout=Timeout shutdown diagnostic
 preferences.ConvertTabsToSpaces=Convert tabs to spaces
 preferences.CreateDesktopLinkWithRestart=Create desktop link with restart
 preferences.CurrentLineHighlight=Current Line Highlight
