--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -325,6 +325,7 @@ preferences.ConnectAtStartup=Автоматически подключаться
 preferences.ConnectOnDouble-click=Подключение по двойному клику
 preferences.Connection=Подключение
 preferences.Connections=Подключения
+preferences.Connection.shutdown.timeout=Таймаут диагностики разрыва соединения
 preferences.ConvertTabsToSpaces=Преобразовывать табуляцию в пробелы
 preferences.CreateDesktopLinkWithRestart=Создать ярлык на рабочем столе при следующем запуске
 preferences.CurrentLineHighlight=Подсветка текущей строки
