fixed dependencies on objects

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -24,6 +24,7 @@ common.database-connections=Database Connections
 common.database=Database
 common.default=Default
 common.delete.button=Delete
+common.dependencies=Dependencies
 common.description=Description
 common.disconnect.button=Disconnect
 common.domain=DOMAIN
