--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -24,6 +24,7 @@ common.database-connections=Подключения к базе данных
 common.database=База данных
 common.default=По умолчанию
 common.delete.button=Удалить
+common.dependencies=Зависимости
 common.description=Описание
 common.disconnect.button=Отключиться
 common.domain=ДОМЕН
