generator test data rusificated

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -148,6 +148,7 @@ action.find-next-command=Find Next
 action.find-previous-command=Find Previous
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.generate-scripts-command=Generate SQL Scripts
+action.generator-test-data-command=Generator Test Data
 action.goto-command.description=Go to line number...
 action.goto-command=Go To...
 action.grant-manager-command.description=Grant manager
@@ -872,6 +873,39 @@ FeedbackPanel.noRemarksErrorMessage=Please enter your remarks in the text area p
 FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
+GeneratorTestDataPanel.TITLE=Generator Test Data
+GeneratorTestDataPanel.Stop=Stop
+GeneratorTestDataPanel.Start=Start
+GeneratorTestDataPanel.Table=Table
+GeneratorTestDataPanel.CountRecords=Count Records
+GeneratorTestDataPanel.Selected=Selected/Deselected
+GeneratorTestDataPanel.Name=Name
+GeneratorTestDataPanel.Type=Type
+GeneratorTestDataPanel.GeneratorMethod=Generator method
+GeneratorTestDataPanel.Random=Random
+GeneratorTestDataPanel.getFromOtherTable=Get from other table
+GeneratorTestDataPanel.getFromList=Get from list
+GeneratorTestDataPanel.Autoincrement=Autoincrement
+GeneratorTestDataPanel.StartValue=Start value
+GeneratorTestDataPanel.Iteration=Iteration
+GeneratorTestDataPanel.InOrder=In Order
+GeneratorTestDataPanel.FromTextArea=From Text Area
+GeneratorTestDataPanel.FromFile=From File
+GeneratorTestDataPanel.ChooseDirectory=Choose Directory
+GeneratorTestDataPanel.Source=Source
+GeneratorTestDataPanel.ChooseFile=Choose File
+GeneratorTestDataPanel.Method=Method
+GeneratorTestDataPanel.Delimiter=Delimiter
+GeneratorTestDataPanel.TableView=Table/View
+GeneratorTestDataPanel.Column=Column
+GeneratorTestDataPanel.Min=Min
+GeneratorTestDataPanel.Max=Max
+GeneratorTestDataPanel.MinLength=Max Length
+GeneratorTestDataPanel.MaxLength=Max Length
+GeneratorTestDataPanel.MinByte=Min Byte
+GeneratorTestDataPanel.MaxByte=Max Byte
+GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
+GeneratorTestDataPanel.UseOnlyThisSymbols=Use Only This Symbols
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
 GrantManagerPanel.AllObjects=All Objects
