1. dependency GUI fixed 2. translated titles of panels with dependencies 3. the name of the test data generator is fixed

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -148,7 +148,7 @@ action.find-next-command=Find Next
 action.find-previous-command=Find Previous
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.generate-scripts-command=Generate SQL Scripts
-action.generator-test-data-command=Generator Test Data
+action.generator-test-data-command=Test Data Generator
 action.goto-command.description=Go to line number...
 action.goto-command=Go To...
 action.grant-manager-command.description=Grant manager
@@ -831,6 +831,8 @@ DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indexes
 DatabaseTableNode.primary-keys=Primary Keys
+DependenciesPanel.dependedOn=Depended On
+DependenciesPanel.dependent=Dependent
 DockedTabPane.menuItem.close=Close
 DockedTabPane.menuItem.minimize=Minimize
 DockedTabPane.menuItem.minimizeAll=Minimize All
@@ -873,7 +875,7 @@ FeedbackPanel.noRemarksErrorMessage=Please enter your remarks in the text area p
 FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
-GeneratorTestDataPanel.TITLE=Generator Test Data
+GeneratorTestDataPanel.TITLE=Test Data Generator
 GeneratorTestDataPanel.Stop=Stop
 GeneratorTestDataPanel.Start=Start
 GeneratorTestDataPanel.Table=Table
