--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -831,6 +831,8 @@ DatabaseTableNode.columns=Столбцы
 DatabaseTableNode.foreign-keys=Внешние ключи
 DatabaseTableNode.indexes=Индексы
 DatabaseTableNode.primary-keys=Первичные ключи
+DependenciesPanel.dependedOn=Объекты БД от которых зависит объект
+DependenciesPanel.dependent=Зависимые от объекта
 DockedTabPane.menuItem.close=Закрыть
 DockedTabPane.menuItem.minimize=Уменьшить
 DockedTabPane.menuItem.minimizeAll=Уменьшить все
