1.Fixed error in the name "generation method" 2.Fixed a curved arrangement of elements on the random generation panel

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -883,7 +883,7 @@ GeneratorTestDataPanel.CountRecords=Количество записей
 GeneratorTestDataPanel.Selected=Выбрать
 GeneratorTestDataPanel.Name=Имя
 GeneratorTestDataPanel.Type=Тип
-GeneratorTestDataPanel.GeneratorMethod=Метод генрации
+GeneratorTestDataPanel.GeneratorMethod=Метод генерации
 GeneratorTestDataPanel.Random=Случайно
 GeneratorTestDataPanel.getFromOtherTable=Получить из другой таблицы
 GeneratorTestDataPanel.getFromList=Получить из списка
