fixed test data generator

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -908,6 +908,8 @@ GeneratorTestDataPanel.MinByte=Min Byte
 GeneratorTestDataPanel.MaxByte=Max Byte
 GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
 GeneratorTestDataPanel.UseOnlyThisSymbols=Use Only This Symbols
+GeneratorTestDataPanel.AfterCommit=Commit after
+GeneratorTestDataPanel.OutputLog=Output to the errors log
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
 GrantManagerPanel.AllObjects=All Objects
