--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -908,6 +908,8 @@ GeneratorTestDataPanel.MinByte=Минимальный байт
 GeneratorTestDataPanel.MaxByte=Максимальный байт
 GeneratorTestDataPanel.CountDigitsAfterComma=Число цифр после запятой
 GeneratorTestDataPanel.UseOnlyThisSymbols=Использовать только эти символы
+GeneratorTestDataPanel.AfterCommit=Фиксация после
+GeneratorTestDataPanel.OutputLog=Вывод ошибок в лог
 GotoCommand.goTo=Перейти к
 GotoCommand.lineNumber=Номер строки:
 GrantManagerPanel.AllObjects=Все объекты
