Added Test data generator (see #38987)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -173,6 +173,23 @@ Red Expert обладает рядом полезных компонентов: 
 		\includegraphics[width = 0.8\linewidth]{img/trace_manager.png}
 	\end{figure}
 
+\anonsubsubsection{\hyperref[sec:test_data_generator]{Генератор тестовых данных}}
+
+Инструмент для быстрой генерации тестовых данных в базах.  С помощью него вы сможете быстро заполнять любую таблицу Ред Базы Данных сгенерированными данными с помощью следующих методов:
+\begin{itemize}
+	\item случайно;
+	\item данными из полей другой таблицы;
+	\item по спискам значений, заданных вручную;
+	\item по спискам значений из файла;
+	\item автоинкремент (для числовых типов данных).
+\end{itemize}
+В методах можно настраивать различные параметры генерации для каждого типа поля. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/test_data_generator_1.png}
+\end{figure}
+
 \anonsubsubsection{\hyperref[sec:logout]{Обозреватель системного журнала состояний вывода}}
 
 Отображение всей информации, которая выводится в стандартный поток вывода, ошибки и предупреждения.
@@ -1718,6 +1735,76 @@ SELECT * FROM employees WHERE (surname = ?)
 	\item Контролируйте окно вывода на наличие ошибок.
 	\item Установите флажок \textit{Сгенерированный сценарий}, чтобы открыть и отобразить сгенерированный скрипт на главной панели.
 \end{enumerate}
+
+\newpage
+
+\section{Генератор тестовых данных}\label{sec:test_data_generator}
+
+Инструмент \textit{Генератор тестовых данных} предназначен для быстрого и удобного заполнения полей таблицы большим объемом данных. Его можно открыть через пункт меню \textit{Инструменты}.
+На главной панели откроется вкладка с названием \textit{Генератор тестовых данных}. 
+
+Прежде чем воспользоваться генератором, убедитесь, что Вы подключены к базе данных и в ней существует хотя бы одна таблица.  
+
+\begin{enumerate}[leftmargin=39pt]
+	\item В поле \textit{Подключение} выберите базу данных, для которой должны быть созданы тестовые данные (если подключено более одной базы данных). 
+
+	\item Далее выберите таблицу. Поля и их типы вы увидите перед собой. Напротив поля поставьте галочку, если Вы хотите, чтобы для него были сгенерированы данные. Иначе это поле будет заполнено значениями \ttt{NULL}.
+
+	\item Напишите количество записей, которые будут сгенерированы. Генерация больших объемов данных может занять некоторое время. 
+
+	\item С правой стороны окна можно выбрать метод генерации отдельно для каждого поля таблицы. 
+Предлагается выбрать один из следующих методов:
+\begin{itemize}[leftmargin=10pt]
+	\item \textbf{\textit{Случайно}}
+	
+	В зависимости от типа поля настраиваются различные параметры генерации:
+	\begin{itemize}[leftmargin=5pt]
+		\item[] \textit{Целочисленные типы}: 
+		\begin{itemize}
+			\item минимальное и максимальное значение диапазона;
+		\end{itemize}	
+		\item[] \textit{Числа с плавающей и фиксированной точкой}:  
+		\begin{itemize}
+			\item  минимальное и максимальное значение диапазона; 
+			\item  число знаков после запятой;
+		\end{itemize}		
+		\item[] \textit{Тип даты и времени}: 
+		\begin{itemize}
+			\item  минимальное и максимальное значение диапазона даты и времени;
+		\end{itemize}		
+		\item[] \textit{Строковые типы}:
+		\begin{itemize}
+			\item минимальная и максимальная длина строки; 
+			\item набор символов;
+		\end{itemize}		
+		\item[] \textit{Тип BLOB}:  
+		\begin{itemize}
+			\item  минимальная и максимальная длина строки; 
+			\item  минимальное и максимальное значение, которое могут принимать байты.
+		\end{itemize}	
+	\end{itemize}	
+	\item \textbf{\textit{Получить из другой таблицы}}
+	
+	В этом методе нужно выбрать таблицу, столбец и количество записей. Записи из таблицы выбираются случайно в указанном количестве, далее из этого списка значений заполняется основная таблица. 
+	\item \textbf{\textit{Получить из списка}}
+	
+	Значения списка формируют содержимое поля.
+	
+	Список должен состоять из элементов соответствующего типа данных, разделенных специальным символом (разделителем). Сам список можно ввести вручную в предназначенном для этого поле, либо загрузить из файла. 
+
+	\item \textbf{\textit{Автоинкремент}}
+	
+	Для автоинкремента настраивается начальное значение, шаг и направление движения шага (в сторону увеличения или уменьшения).
+	
+	\end{itemize}
+	\item Наконец, нажмите на кнопку \textit{Начать генерацию}. 
+\end{enumerate}
+
+Сгенерированные данные можно посмотреть в редакторе соответствующей таблицы на странице \textit{Данные}:
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/test_data_generator_2.png}
+\end{figure}
 
 \newpage
 
