See #38987 fixed test data generator 1.fixed query for inserting records (for columns and tables from small letters) 2.added error window display 3.negative numbers are not allowed in fields with quantity 4.delimited bugs fixed 5.Added ability to generate null

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -910,6 +910,7 @@ GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
 GeneratorTestDataPanel.UseOnlyThisSymbols=Use Only This Symbols
 GeneratorTestDataPanel.AfterCommit=Commit after
 GeneratorTestDataPanel.OutputLog=Output to the errors log
+GeneratorTestDataPanel.UseNull=Use NULL
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
 GrantManagerPanel.AllObjects=All Objects
