--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -910,6 +910,7 @@ GeneratorTestDataPanel.CountDigitsAfterComma=Число цифр после за
 GeneratorTestDataPanel.UseOnlyThisSymbols=Использовать только эти символы
 GeneratorTestDataPanel.AfterCommit=Фиксация после
 GeneratorTestDataPanel.OutputLog=Вывод ошибок в лог
+GeneratorTestDataPanel.UseNull=Использовать NULL
 GotoCommand.goTo=Перейти к
 GotoCommand.lineNumber=Номер строки:
 GrantManagerPanel.AllObjects=Все объекты
