See #38987 added check stop on error localization sorting

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -875,42 +875,43 @@ FeedbackPanel.noRemarksErrorMessage=Please enter your remarks in the text area p
 FeedbackPanel.postingFeedback=Posting Feedback
 FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
 FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
-GeneratorTestDataPanel.TITLE=Test Data Generator
-GeneratorTestDataPanel.Stop=Stop
-GeneratorTestDataPanel.Start=Start
-GeneratorTestDataPanel.Table=Table
-GeneratorTestDataPanel.CountRecords=Count Records
-GeneratorTestDataPanel.Selected=Selected/Deselected
-GeneratorTestDataPanel.Name=Name
-GeneratorTestDataPanel.Type=Type
-GeneratorTestDataPanel.GeneratorMethod=Generation method
-GeneratorTestDataPanel.Random=Random
-GeneratorTestDataPanel.getFromOtherTable=Get from other table
-GeneratorTestDataPanel.getFromList=Get from list
-GeneratorTestDataPanel.Autoincrement=Autoincrement
-GeneratorTestDataPanel.StartValue=Start value
-GeneratorTestDataPanel.Iteration=Iteration
-GeneratorTestDataPanel.InOrder=In Order
-GeneratorTestDataPanel.FromTextArea=From Text Area
-GeneratorTestDataPanel.FromFile=From File
-GeneratorTestDataPanel.ChooseDirectory=Choose Directory
-GeneratorTestDataPanel.Source=Source
-GeneratorTestDataPanel.ChooseFile=Choose File
-GeneratorTestDataPanel.Method=Method
-GeneratorTestDataPanel.Delimiter=Delimiter
-GeneratorTestDataPanel.TableView=Table/View
-GeneratorTestDataPanel.Column=Column
-GeneratorTestDataPanel.Min=Min
-GeneratorTestDataPanel.Max=Max
-GeneratorTestDataPanel.MinLength=Max Length
-GeneratorTestDataPanel.MaxLength=Max Length
-GeneratorTestDataPanel.MinByte=Min Byte
-GeneratorTestDataPanel.MaxByte=Max Byte
-GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
-GeneratorTestDataPanel.UseOnlyThisSymbols=Use Only This Symbols
 GeneratorTestDataPanel.AfterCommit=Commit after
+GeneratorTestDataPanel.Autoincrement=Autoincrement
+GeneratorTestDataPanel.ChooseDirectory=Choose Directory
+GeneratorTestDataPanel.ChooseFile=Choose File
+GeneratorTestDataPanel.Column=Column
+GeneratorTestDataPanel.CountDigitsAfterComma=Count Digits After Comma
+GeneratorTestDataPanel.CountRecords=Count Records
+GeneratorTestDataPanel.Delimiter=Delimiter
+GeneratorTestDataPanel.FromFile=From File
+GeneratorTestDataPanel.FromTextArea=From Text Area
+GeneratorTestDataPanel.GeneratorMethod=Generation method
+GeneratorTestDataPanel.InOrder=In Order
+GeneratorTestDataPanel.Iteration=Iteration
+GeneratorTestDataPanel.Max=Max
+GeneratorTestDataPanel.MaxByte=Max Byte
+GeneratorTestDataPanel.MaxLength=Max Length
+GeneratorTestDataPanel.Method=Method
+GeneratorTestDataPanel.Min=Min
+GeneratorTestDataPanel.MinByte=Min Byte
+GeneratorTestDataPanel.MinLength=Max Length
+GeneratorTestDataPanel.Name=Name
 GeneratorTestDataPanel.OutputLog=Output to the errors log
+GeneratorTestDataPanel.Random=Random
+GeneratorTestDataPanel.Selected=Selected/Deselected
+GeneratorTestDataPanel.Source=Source
+GeneratorTestDataPanel.Start=Start
+GeneratorTestDataPanel.StartValue=Start value
+GeneratorTestDataPanel.Stop=Stop
+GeneratorTestDataPanel.StopOnError=Stop on error
+GeneratorTestDataPanel.TITLE=Test Data Generator
+GeneratorTestDataPanel.Table=Table
+GeneratorTestDataPanel.TableView=Table/View
+GeneratorTestDataPanel.Type=Type
 GeneratorTestDataPanel.UseNull=Use NULL
+GeneratorTestDataPanel.UseOnlyThisSymbols=Use Only This Symbols
+GeneratorTestDataPanel.getFromList=Get from list
+GeneratorTestDataPanel.getFromOtherTable=Get from other table
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
 GrantManagerPanel.AllObjects=All Objects
